updated cases file and added case2.html

--- a/cases.html
+++ b/cases.html
@@ -196,18 +196,24 @@
 <main>
   <section class="intro">
     <h1>Our Case Studies</h1>
-    <p>Discover how Smart Essay Coach empowers students to overcome academic challenges and achieve their goals. Explore this detailed success story to see our coaching in action.</p>
+    <p>Discover how Smart Essay Coach empowers students in nursing and business programs to overcome academic challenges and achieve their goals. Explore these detailed success stories to see our coaching in action.</p>
     <a href="./contact.html" class="cta">Get Started with Your Success</a>
   </section>
 
   <section class="case-studies">
-    <h2>Featured Success Story</h2>
+    <h2>Featured Success Stories</h2>
     <div class="cases-grid">
       <div class="case-card">
         <span class="material-icons">school</span>
         <h3>Guiding an RN-BSN Student to Success in UTA’s NURS 4465</h3>
         <p>A nursing student struggled with community health assignments in UTA’s RN-BSN program. Learn how we helped her master APA formatting and course requirements to earn an A.</p>
         <a href="./case1.html">Read Full Case Study</a>
+      </div>
+      <div class="case-card">
+        <span class="material-icons">book</span>
+        <h3>Guiding a Doctoral Student Through Liberty’s DBA Concept Paper</h3>
+        <p>A DBA student faced challenges with their concept paper at Liberty University. Discover how our coaching led to minimal revisions and first-submission approvals.</p>
+        <a href="./case2.html">Read Full Case Study</a>
       </div>
     </div>
   </section>
